--- a/gsi526.html
+++ b/gsi526.html
@@ -87,9 +87,9 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(09/05)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
-					<li>Prova 2 - 30 pts <b>(06/06)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
-					<li>Prova 3 - 30 pts <b>(14/07)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>-->
+					<li>Prova 1 - 25 pts <b>(09/05)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i></li>
+					<li>Prova 2 - 30 pts <b>(06/06)</b> <img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 06, 07, 08, 09 e 10</i></li>
+					<li>Prova 3 - 30 pts <b>(14/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i></li>
 					<li>Lista 1 - 5 pts <b>(09/05)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 2 - 5 pts <b>(06/06)</b> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
 					<li>Lista 3 - 5 pts <b>(14/07)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
@@ -111,9 +111,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button> <img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto.pptx"> Aula 15 - Padrões de Projeto (Parte 1)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-padroes-de-projeto.pptx"> Aula 16 - Padrões de Projeto (Parte 2)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto.pptx"> Aula 15 - Padrões de Projeto (Parte 1)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28">--></li> 
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-padroes-de-projeto.pptx"> Aula 16 - Padrões de Projeto (Parte 2)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 03 - Scrum.pdf"> Aula 03 - Scrum (+ Kanban e Lean)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
