--- a/gsi526.html
+++ b/gsi526.html
@@ -90,7 +90,7 @@
 					<li>Prova 1 - 25 pts <b>(26/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 01, 02, 03, 04 e 05</i>--></li>
 					<li>Prova 2 - 30 pts <b>(31/10)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"> - <i> Aulas 06, 07, 08, 09 e 10</i>--></li>
 					<li>Prova 3 - 30 pts <b>(05/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 11, 12, 13, 14, 15 e 16</i>--></li>
-					<li>Lista 1 - 5 pts <b>(26/09)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
+					<li>Lista 1 - 5 pts <b>(26/09)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li>Lista 2 - 5 pts <b>(31/10)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19">--></li>
 					<li>Lista 3 - 5 pts <b>(05/12)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					</ul>
@@ -98,7 +98,7 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Introdução à Engenharia de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-introducao.pptx"> Aula 01 - Requisitos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-processos.pptx"> Aula 02 - Processos de Software</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 03 - O Método Ágil Scrum</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g1FBFwAW_78"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-smells.pptx"> Aula 04 - Reengenharia, Refatoração e Bad Smell</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
@@ -158,9 +158,9 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>26/09</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>31/10</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/12</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>26/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>31/10</b>)</a></button> <img src="images/deadline.png"" alt="" height="25" width="19"></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>05/12</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
