--- a/poo-lab.html
+++ b/poo-lab.html
@@ -89,9 +89,9 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>				
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_lab.pdf"> Relação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_pc2_apresentacao.pdf"> Ordem de Apresentação dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/grupos_notas.pdf"> Notas dos Grupos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					</ul>
